--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "next-auth": "^4.15.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "8.0.0",
-    "root": "github:intrepion/next-auth"
+    "react-markdown": "8.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
